fix alignment of player hand container on start

--- a/frontend/src/styles/Game/Player.scss
+++ b/frontend/src/styles/Game/Player.scss
@@ -6,7 +6,7 @@
   .player-field {
     display: flex;
     height: 9.5rem;
-    margin-bottom: 3rem;
+    // margin-bottom: 3rem;
     gap: 1rem;
     .player-field-card {
       background: #ecece0;
@@ -39,7 +39,7 @@
     height: 9.5rem;
     display: flex;
     justify-content: center;
-
+    margin-top: 2rem;
     .player-card {
       z-index: 1;
       background: #ecece0;
